--- a/src/example-orderexport/view/frontend/layout/sales_order_view.xml
+++ b/src/example-orderexport/view/frontend/layout/sales_order_view.xml
@@ -5,7 +5,7 @@
             <block name="sales.order.export.link" after="sales.order.info.buttons" ifconfig="sales/order_export/enabled"
                    template="SwiftOtter_OrderExport::order/order_export_link.phtml">
                 <arguments>
-                    <argument name="some_model" xsi:type="object">SwiftOtter\OrderExport\ViewModel\OrderExportLink</argument>
+                    <argument name="view_model" xsi:type="object">SwiftOtter\OrderExport\ViewModel\OrderExportLink</argument>
                 </arguments>
             </block>
         </referenceContainer>
