--- a/src/example-orderexport/view/frontend/templates/order/order_export_link.phtml
+++ b/src/example-orderexport/view/frontend/templates/order/order_export_link.phtml
@@ -7,7 +7,7 @@
 /** @var \Magento\Framework\View\Element\Template $block */
 
 /** @var \SwiftOtter\OrderExport\ViewModel\OrderExportLink $viewModel */
-$viewModel = $block->getData('some_model');
+$viewModel = $block->getData('view_model');
 ?>
 
-<a href="<?= $viewModel->getOrderExportUrl() ?>"><?= __('Exported Info') ?></a>
+<a href="<?= $viewModel->getOrderExportUrl() ?>"><?= __('Export Details') ?></a>
