--- a/src/example-theme-professional/web/css/source/_theme.less
+++ b/src/example-theme-professional/web/css/source/_theme.less
@@ -14,7 +14,10 @@
 @icons__font-path: '@{baseDir}fonts/Luma-Icons';
 @icons__font-name: 'luma-icons';
 
-//  Color nesting
+//  Colors
+
+@theme__color__secondary: #449944;
+
 @panel__background-color: @color-gray-light0;
 @border-color__base: @color-gray80;
 
@@ -289,3 +292,6 @@
 //  ---------------------------------------------
 
 @copyright__background-color: @color-gray-middle4;
+
+// Order Export Details
+@order-export-headers__color: @theme__color__secondary;
