--- a/src/example-orderexport/view/frontend/templates/order/export/view.phtml
+++ b/src/example-orderexport/view/frontend/templates/order/export/view.phtml
@@ -30,7 +30,7 @@ $shipOn = $exportDetails->getShipOn();
     <dt><?= __('Merchant Notes') ?></dt>
     <dd><?= $exportDetails->getMerchantNotes() ?? '' ?></dd>
 
-    <dt><?= __('Exported') ?></dt>
+    <dt><?= __('Has Been Exported') ?></dt>
     <dd><?= ($exportDetails->hasBeenExported()) ? __('Yes') : __('No') ?></dd>
 </dl>
 
