--- a/src/example-orderexport-admin/view/adminhtml/layout/orderexport_index_index.xml
+++ b/src/example-orderexport-admin/view/adminhtml/layout/orderexport_index_index.xml
@@ -3,6 +3,7 @@
     <update handle="styles"/>
     <body>
         <referenceContainer name="content">
+            <uiComponent name="orderexport_detail_listing" />
         </referenceContainer>
     </body>
 </page>
