--- a/src/example-orderexport/view/frontend/web/css/source/_module.less
+++ b/src/example-orderexport/view/frontend/web/css/source/_module.less
@@ -1,11 +1,15 @@
 @order-export-headers__color: @color-blue3;
 
-.order-export-details {
-    dt {
-        color: @order-export-headers__color;
+& when (@media-common = true) {
+
+    .order-export-details {
+        dt {
+            color: @order-export-headers__color;
+        }
+
+        dd {
+            margin-left: @indent__base;
+        }
     }
 
-    dd {
-        margin-left: @indent__base;
-    }
 }
