--- a/src/example-orderexport/view/frontend/layout/sales_order_view.xml
+++ b/src/example-orderexport/view/frontend/layout/sales_order_view.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <body>
+        <referenceContainer name="order.actions.container">
+            <block name="sales.order.export.link" after="sales.order.info.buttons" ifconfig="sales/order_export/enabled"
+                   template="SwiftOtter_OrderExport::order/order_export_link.phtml" />
+        </referenceContainer>
+    </body>
 </page>
