--- a/src/example-theme-professional/SwiftOtter_OrderExport/layout/order_export_view_index.xml
+++ b/src/example-theme-professional/SwiftOtter_OrderExport/layout/order_export_view_index.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <referenceContainer name="content">
-        <block class="Magento\Cms\Block\BlockByIdentifier" after="order.export.view">
+        <block class="Magento\Cms\Block\BlockByIdentifier" after="order.export.view" ifconfig="sales/order_export/enabled">
             <arguments>
                 <argument name="identifier" xsi:type="string">fulfillment-notice</argument>
             </arguments>
